public/app.css
body {
  width: 100%;
  height: 100%;
  margin-left: 0;
  margin-right: 0;
  box-sizing: border-box;
  font-family: sans-serif;
  background-color: #7AC9F1;
  background-image: url(/images/background.png);
  background-position: top center;
  background-attachment: fixed;
  background-repeat: no-repeat;
  background-size: cover;
}

#prebundleContent {
  position: relative;
  height: 220px;
  width: 320px;
  margin: 50px auto 25px auto;
  padding-top: 20px;
  padding-bottom: 20px;
  background-color: rgba(25, 25, 25, 0.75);
  box-shadow: 0px 10px 60px -5px #000;
  border-radius: 2px;
  text-align: center;
  color: #FFF;
}

#viewOnGitHub {
  width: 254px;
  height: 39px;
  display: block;
  margin: 15px auto;
  color: #FFF;
  text-align: center;
  line-height: 40px;
  font-size: 14px;
  background-color: purple;
  text-decoration: none;
  border-radius: 2px;
}

#viewOnGitHubIcon {
  float: left;
  font-size: 21px;
  width: 50px;
  height: 26px;
  margin: 7px;
  padding: 2px;
  text-align: center;
  border-right: 1px solid #FFF;
}

